# apps/web/src/api/openapi.json
@@ -1008,6 +1008,17 @@
               }
             ],
             "title": "Preview Url"
+          },
+          "fallback_url": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Fallback Url"
           }
         },
         "type": "object",
